--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -18,9 +18,6 @@ along with u032. If not, see https://www.gnu.org/licenses/. */
     justify-content: center;
 }
 
-.top {
-    margin-top:23ex;
-}
 
 .button {
     margin: 5px;
@@ -42,10 +39,13 @@ footer {
     margin-top: 4ex;
 }
 
-@media screen and (max-device-width:480px){
+@media screen and (min-width:769px){
     .top {
-        margin-top: 13ex;
+        margin-top: 23ex;
     }
+}
+
+@media screen and (max-device-width:480px){
     footer {
         margin-top: 3.3ex;
     }
